--- a/index.html
+++ b/index.html
@@ -18,15 +18,12 @@
   <div id="header">
     <header id="toolbar">
       <nav id="nav">
-      <div id="mylogo">
-        <a href="#header"><img data-aos="flip-left" data-aos-duration="1000" src="img/logo_danys_clean.png" alt="Logo" class="image_header"></a>
-      </div>
+        <div id="mylogo">
+          <a href="#header"><img data-aos="flip-left" data-aos-duration="1000" src="img/logo_danys_clean.png" alt="Logo"
+              class="image_header"></a>
+        </div>
         <div id="btn-menu"><img src="img/Normal-Button/Tertiary/Icons/Icon-Menu.png" alt=""></div>
-        <ul
-          id="menu-lst"
-          data-aos="fade-down"
-          data-aos-duration="1000"
-          >
+        <ul id="menu-lst" data-aos="fade-down" data-aos-duration="1000">
           <li><a href="#portfolio" class="menu-lst-txt">Portfolio</a></li>
           <li><a class="menu-lst-txt" href="#About-my-self">About</a></li>
           <li><a class="menu-lst-txt" href="#Contact-Section">Contact</a></li>
@@ -35,19 +32,12 @@
     </header>
     <section id="headline">
       <div class="headline-txt">
-        <h1
-          data-aos="fade-right"
-          data-aos-offset="300"
-          data-aos-easing="ease-in-sine"
-          data-aos-duration="1000"
+        <h1 data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="1000"
           class="txt-1 order-0 pd-0 mrg-0 mbl-to-hide">I’m Danys Glad to see you!</h1>
         <h1 class="txt-1-dsktp order-0 pd-0 mrg-0 dsktp-to-hide dsktp-to-show h1-animation">I’m Danys <br>
           Glad to see you!</h1>
-        <p 
-          data-aos="fade-right"
-          data-aos-duration="1000"
-         
-          class="txt-2-dsktp order-1 pd-0 mrg-0 txt-j">I’m a software developer! I can help you build
+        <p data-aos="fade-right" data-aos-duration="1000" class="txt-2-dsktp order-1 pd-0 mrg-0 txt-j">I’m a software
+          developer! I can help you build
           a product , feature or website Look through
           some of my work and experience! If you
           like what you see and have a project you need
@@ -55,11 +45,16 @@
         </p>
         <div data-aos="zoom-in" data-aos-duration="1000" class="txt-3 order-2">LET’S CONNECT</div>
         <ul data-aos="fade-up" data-aos-duration="1000" class="scl-icons order-3 mrg-0 pd-0">
-          <li><a href="https://twitter.com/Danys_Linares" target="_blank" rel="noreferrer noopener"><img src="img/twitter.svg" alt="twitter"></a></li>
-          <li><a href="https://www.linkedin.com/in/danys-linares/" target="_blank" rel="noreferrer noopener"><img src="img/Linkedinicon.svg" alt="linkedin"></a></li>
-          <li><a href="https://medium.com/@danlinmoy" target="_blank" rel="noreferrer noopener" ><img src="img/medium.svg" alt="medium"></a></li>
-          <li><a href="https://github.com/d4nQw3rty" target="_blank" rel="noreferrer noopener"><img src="img/github.svg" alt="github"></a></li>
-          <li><a href="https://wellfound.com/u/danys-linares" target="_blank" rel="noreferrer noopener"><img src="img/angelist.svg" alt="angelist" rel="noreferrer noopener"></a></li>
+          <li><a href="https://twitter.com/Danys_Linares" target="_blank" rel="noreferrer noopener"><img
+                src="img/twitter.svg" alt="twitter"></a></li>
+          <li><a href="https://www.linkedin.com/in/danys-linares/" target="_blank" rel="noreferrer noopener"><img
+                src="img/Linkedinicon.svg" alt="linkedin"></a></li>
+          <li><a href="https://medium.com/@danlinmoy" target="_blank" rel="noreferrer noopener"><img
+                src="img/medium.svg" alt="medium"></a></li>
+          <li><a href="https://github.com/d4nQw3rty" target="_blank" rel="noreferrer noopener"><img src="img/github.svg"
+                alt="github"></a></li>
+          <li><a href="https://wellfound.com/u/danys-linares" target="_blank" rel="noreferrer noopener"><img
+                src="img/angelist.svg" alt="angelist" rel="noreferrer noopener"></a></li>
         </ul>
       </div>
     </section>
@@ -70,25 +65,19 @@
   </div>
 
   <div id="popUp">
-    
+
   </div>
 
 
-  <section class="about" id="About-my-self" >
-    <div
-      class="top pd-0" 
-      data-aos="flip-left"
-      data-aos-easing="ease-out-cubic"
-      data-aos-duration="1000">
+  <section class="about" id="About-my-self">
+    <div class="top pd-0" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="1000">
       <h2 class="txt-1 mrg-0 pd-0 about-tlt">About<br>
         Myself</h2>
       <p class="txt-2 mrg-0 pd-0">Hello I’m a software developer! I can help you build a product , feature or website
         Look through some of my work and experience! If you like what you see and have a project you need coded, don’t
         hestiate to contact me.</p>
       <h2 class="txt-3 mrg-0 pd-0">LET’S CONNECT</h2>
-      <ul
-       class="scl-icons mrg-0 pd-0"
-       >
+      <ul class="scl-icons mrg-0 pd-0">
         <li><a href="#"><img src="img/github.svg" alt="github"></a></li>
         <li><a href="#"><img src="img/Linkedinicon.svg" alt="linkedin"></a></li>
         <li><a href="#"><img src="img/angelist.svg" alt="angelist"></a></li>
@@ -97,15 +86,12 @@
       </ul>
       <button type="submit" class="mobile-btn mobile-btn-txt ">Get my Resume</button>
     </div>
-    <div class="skill"
-         data-aos="flip-right"
-         data-aos-easing="ease-out-cubic"
-         data-aos-duration="1000">
+    <div class="skill" data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="1000">
       <ul class="list-stl pd-0 skill-lst-mrg">
         <li>
           <div class="frame-7" id="lng">
             <span class="skill-txt">Languages</span>
-            <img  id="lng-darrow" src="img/Normal-Button/Tertiary/Drop-arrow.png" alt="drop arrow">
+            <img id="lng-darrow" src="img/Normal-Button/Tertiary/Drop-arrow.png" alt="drop arrow">
             <img id="lng-rarrow" class="hide-item" src="img/Normal-Button/Tertiary/right-arrow.png" alt="right arrow">
           </div>
           <ul id="lg-list" class="lng-list list-stl mgr-0">
@@ -126,32 +112,43 @@
               <span class="lng-txt pd-0 mrg-0"> Ruby</span>
             </li>
             <li class="frame-9">
-              <img class="img-size" src="https://user-images.githubusercontent.com/25181517/117208740-bfb78400-adf5-11eb-97bb-09072b6bedfc.png" alt="PostgreSQL">
-              <span class="lng-txt pd-0 mrg-0">PostgreSQL</span>            </li>
+              <img class="img-size"
+                src="https://user-images.githubusercontent.com/25181517/117208740-bfb78400-adf5-11eb-97bb-09072b6bedfc.png"
+                alt="PostgreSQL">
+              <span class="lng-txt pd-0 mrg-0">PostgreSQL</span>
+            </li>
           </ul>
         </li>
         <li class="separator"></li>
-        <li>        
+        <li>
           <div class="frame-7">
             <span class="skill-txt">Frameworks</span>
             <img id="fwrk-d-arrow" class="hide-item" src="img/Normal-Button/Tertiary/Drop-arrow.png" alt="drop arrow">
-            <img id="fwrk-r-arrow"  src="img/Normal-Button/Tertiary/right-arrow.png" alt="right arrow">
+            <img id="fwrk-r-arrow" src="img/Normal-Button/Tertiary/right-arrow.png" alt="right arrow">
           </div>
           <ul id="fwrk-list" class="lng-list hide-skills list-stl mgr-0">
             <li class="frame-9">
-              <img class="img-size" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/bootstrap/bootstrap-plain-wordmark.svg" alt="bootstrap image">
+              <img class="img-size"
+                src="https://raw.githubusercontent.com/devicons/devicon/master/icons/bootstrap/bootstrap-plain-wordmark.svg"
+                alt="bootstrap image">
               <span class="lng-txt pd-0 mrg-0"> BootStrap</span>
             </li>
             <li class="frame-9">
-              <img class="img-size" src="https://user-images.githubusercontent.com/25181517/192603748-3ac17112-3653-4257-80da-a57334b11411.png" alt="rails image">
+              <img class="img-size"
+                src="https://user-images.githubusercontent.com/25181517/192603748-3ac17112-3653-4257-80da-a57334b11411.png"
+                alt="rails image">
               <span class="lng-txt pd-0 mrg-0">Rails</span>
             </li>
             <li class="frame-9">
-              <img class="img-size" src="https://user-images.githubusercontent.com/25181517/183897015-94a058a6-b86e-4e42-a37f-bf92061753e5.png" alt="css image">
+              <img class="img-size"
+                src="https://user-images.githubusercontent.com/25181517/183897015-94a058a6-b86e-4e42-a37f-bf92061753e5.png"
+                alt="css image">
               <span class="lng-txt pd-0 mrg-0">React</span>
             </li>
             <li class="frame-9">
-              <img class="img-size" src="https://user-images.githubusercontent.com/25181517/202896760-337261ed-ee92-4979-84c4-d4b829c7355d.png" alt="tailwind image">
+              <img class="img-size"
+                src="https://user-images.githubusercontent.com/25181517/202896760-337261ed-ee92-4979-84c4-d4b829c7355d.png"
+                alt="tailwind image">
               <span class="lng-txt pd-0 mrg-0">Tailwind</span>
             </li>
           </ul>
@@ -186,23 +183,14 @@
       </ul>
     </div>
   </section>
-  <section class="contact-me overflow" id="Contact-Section"
-    data-aos="fade-in"
-    data-aos-easing="ease-out-cubic"
+  <section class="contact-me overflow" id="Contact-Section" data-aos="fade-in" data-aos-easing="ease-out-cubic"
     data-aos-duration="1000">
-    <div class="contact-me-bg"
-    data-aos="fade-up"
-    data-aos-easing="ease-out-cubic"
-    data-aos-duration="1000">
+    <div class="contact-me-bg" data-aos="fade-up" data-aos-easing="ease-out-cubic" data-aos-duration="1000">
       <div class="contact-me-container">
         <h2 class="contact-me-title">Contact me</h2>
         <p class="contact-me-paragraph dsktp-pd">If you have an application you are interested in developing, a feature
           that you need built or a project that needs coding. I’d love to help with it</p>
-        <form 
-        action="https://formspree.io/f/xnqwkwnk" 
-        method="post" 
-        class="contact-me-form"
-        id="form">
+        <form action="https://formspree.io/f/xnqwkwnk" method="post" class="contact-me-form" id="form">
           <label for="name-input"></label>
           <input type="text" name="name" id="name-input" maxlength="30" class="input" placeholder="Full name" required>
           <label for="email-input"></label>
