--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header id="toolbar">
       <nav id="nav">
         <div id="mylogo">
-          <a href="#header"><img data-aos="flip-left" data-aos-duration="1000" src="img/logo_danys_clean.png" alt="Logo"
+          <a href="#header"><img data-aos="flip-left" data-aos-duration="1000" src="img/logo_danys_clean.png" alt="Logo with name Danys"
               class="image_header"></a>
         </div>
         <div id="btn-menu"><img src="img/Normal-Button/Tertiary/Icons/Icon-Menu.png" alt=""></div>
@@ -35,15 +35,15 @@
         <h1 data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="1000"
           class="txt-1 order-0 pd-0 mrg-0 mbl-to-hide">I’m Danys Glad to see you!</h1>
         <h1 class="txt-1-dsktp order-0 pd-0 mrg-0 dsktp-to-hide dsktp-to-show h1-animation">I’m Danys <br>
-          Glad to see you!</h1>
-        <p data-aos="fade-right" data-aos-duration="1000" class="txt-2-dsktp order-1 pd-0 mrg-0 txt-j">I’m a software
+          Glad to see you!</h2>
+        <p data-aos="fade-right" data-aos-duration="1000" class="txt-2-dsktp order-1 pd-0 mrg-0">I’m a software
           developer! I can help you build
           a product , feature or website Look through
           some of my work and experience! If you
           like what you see and have a project you need
           coded, don’t hestiate to contact me.
         </p>
-        <div data-aos="zoom-in" data-aos-duration="1000" class="txt-3 order-2">LET’S CONNECT</div>
+        <h2 data-aos="zoom-in" data-aos-duration="1000" class="txt-3 order-2">LET’S CONNECT</h2>
         <ul data-aos="fade-up" data-aos-duration="1000" class="scl-icons order-3 mrg-0 pd-0">
           <li><a href="https://twitter.com/Danys_Linares" target="_blank" rel="noreferrer noopener"><img
                 src="img/twitter.svg" alt="twitter"></a></li>
@@ -71,7 +71,7 @@
 
   <section class="about" id="About-my-self">
     <div class="top pd-0" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="1000">
-      <h2 class="txt-1 mrg-0 pd-0 about-tlt">About<br>
+      <h1 class="txt-1 mrg-0 pd-0 about-tlt">About<br>
         Myself</h2>
       <p class="txt-2 mrg-0 pd-0">Hello I’m a software developer! I can help you build a product , feature or website
         Look through some of my work and experience! If you like what you see and have a project you need coded, don’t
@@ -96,25 +96,25 @@
           </div>
           <ul id="lg-list" class="lng-list list-stl mgr-0">
             <li class="frame-9">
-              <img src="img/js-Ellipse.png" alt="javascript image">
+              <img src="img/js-Ellipse.png" alt="javascript image logo">
               <span class="lng-txt pd-0 mrg-0"> JavaSript</span>
             </li>
             <li class="frame-9">
-              <img src="img/html-Ellipse.png" alt="html image">
+              <img src="img/html-Ellipse.png" alt="html image logo">
               <span class="lng-txt pd-0 mrg-0">HTML</span>
             </li>
             <li class="frame-9">
-              <img src="img/css-Ellipse.png" alt="css image">
+              <img src="img/css-Ellipse.png" alt="css image logo">
               <span class="lng-txt pd-0 mrg-0">CSS</span>
             </li>
             <li class="frame-9">
-              <img class="frame-9-img" src="img/ruby-ellipse.png" alt="javascript image">
+              <img class="frame-9-img" src="img/ruby-ellipse.png" alt="ruby image logo">
               <span class="lng-txt pd-0 mrg-0"> Ruby</span>
             </li>
             <li class="frame-9">
               <img class="img-size"
                 src="https://user-images.githubusercontent.com/25181517/117208740-bfb78400-adf5-11eb-97bb-09072b6bedfc.png"
-                alt="PostgreSQL">
+                alt="PostgreSQL image logo">
               <span class="lng-txt pd-0 mrg-0">PostgreSQL</span>
             </li>
           </ul>
@@ -130,25 +130,25 @@
             <li class="frame-9">
               <img class="img-size"
                 src="https://raw.githubusercontent.com/devicons/devicon/master/icons/bootstrap/bootstrap-plain-wordmark.svg"
-                alt="bootstrap image">
+                alt="bootstrap image logo">
               <span class="lng-txt pd-0 mrg-0"> BootStrap</span>
             </li>
             <li class="frame-9">
               <img class="img-size"
                 src="https://user-images.githubusercontent.com/25181517/192603748-3ac17112-3653-4257-80da-a57334b11411.png"
-                alt="rails image">
+                alt="rails image logo">
               <span class="lng-txt pd-0 mrg-0">Rails</span>
             </li>
             <li class="frame-9">
               <img class="img-size"
                 src="https://user-images.githubusercontent.com/25181517/183897015-94a058a6-b86e-4e42-a37f-bf92061753e5.png"
-                alt="css image">
+                alt="css image logo">
               <span class="lng-txt pd-0 mrg-0">React</span>
             </li>
             <li class="frame-9">
               <img class="img-size"
                 src="https://user-images.githubusercontent.com/25181517/202896760-337261ed-ee92-4979-84c4-d4b829c7355d.png"
-                alt="tailwind image">
+                alt="tailwind image logo">
               <span class="lng-txt pd-0 mrg-0">Tailwind</span>
             </li>
           </ul>
@@ -162,19 +162,19 @@
           </div>
           <ul id="skill-list" class="lng-list hide-skills list-stl mgr-0">
             <li class="frame-9">
-              <img class="img-size" src="img/problemsolving.png" alt="Problem solving image">
+              <img class="img-size" src="img/problemsolving.png" alt="people thinking">
               <span class="lng-txt pd-0 mrg-0"> Problem Solving</span>
             </li>
             <li class="frame-9">
-              <img class="img-size" src="img/communication.png" alt="Communication image">
+              <img class="img-size" src="img/communication.png" alt="people talking">
               <span class="lng-txt pd-0 mrg-0">Communication</span>
             </li>
             <li class="frame-9">
-              <img class="img-size" src="img/lupa.png" alt="Research img">
+              <img class="img-size" src="img/lupa.png" alt="people searching">
               <span class="lng-txt pd-0 mrg-0">Research</span>
             </li>
             <li class="frame-9">
-              <img class="img-size" src="img/teamwork.png" alt="javascript image">
+              <img class="img-size" src="img/teamwork.png" alt="people shaking hands">
               <span class="lng-txt pd-0 mrg-0"> Tearwork</span>
             </li>
           </ul>
@@ -187,15 +187,15 @@
     data-aos-duration="1000">
     <div class="contact-me-bg" data-aos="fade-up" data-aos-easing="ease-out-cubic" data-aos-duration="1000">
       <div class="contact-me-container">
-        <h2 class="contact-me-title">Contact me</h2>
+        <h1 class="contact-me-title">Contact me</h1>
         <p class="contact-me-paragraph dsktp-pd">If you have an application you are interested in developing, a feature
           that you need built or a project that needs coding. I’d love to help with it</p>
         <form action="https://formspree.io/f/xnqwkwnk" method="post" class="contact-me-form" id="form">
-          <label for="name-input"></label>
+          <label class="hide-item" for="name-input">Name</label>
           <input type="text" name="name" id="name-input" maxlength="30" class="input" placeholder="Full name" required>
-          <label for="email-input"></label>
+          <label class="hide-item"  for="email-input">email</label>
           <input type="email" name="email" id="email-input" class="input" placeholder="Email address" required>
-          <label for="message-input"></label>
+          <label class="hide-item" for="message-input">message</label>
           <textarea name="message" id="message-input" cols="30" rows="6" class="input" maxlength="500" required
             placeholder="Write your message here"></textarea>
           <h6 id="error">Error</h6>
