--- a/index.html
+++ b/index.html
@@ -36,12 +36,10 @@
           class="txt-1 order-0 pd-0 mrg-0 mbl-to-hide">I’m Danys Glad to see you!</h1>
         <h1 class="txt-1-dsktp order-0 pd-0 mrg-0 dsktp-to-hide dsktp-to-show h1-animation">I’m Danys <br>
           Glad to see you!</h2>
-        <p data-aos="fade-right" data-aos-duration="1000" class="txt-2-dsktp order-1 pd-0 mrg-0">I’m a software
-          developer! I can help you build
-          a product , feature or website Look through
-          some of my work and experience! If you
-          like what you see and have a project you need
-          coded, don’t hestiate to contact me.
+        <p data-aos="fade-right" data-aos-duration="1000" class="txt-2-dsktp order-1 pd-0 mrg-0">
+          I’m a software developer! Passionate about helping and turn ideas into reality.
+          Whether you need a new product, feature, or website, I have the expertise to bring your vision to life.
+          If you like what you see and have a project that needs coding, don’t hestiate to contact me.
         </p>
         <h2 data-aos="zoom-in" data-aos-duration="1000" class="txt-3 order-2">LET’S CONNECT</h2>
         <ul data-aos="fade-up" data-aos-duration="1000" class="scl-icons order-3 mrg-0 pd-0">
@@ -73,9 +71,11 @@
     <div class="top pd-0" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="1000">
       <h1 class="txt-1 mrg-0 pd-0 about-tlt">About<br>
         Myself</h2>
-      <p class="txt-2 mrg-0 pd-0">Hello I’m a software developer! I can help you build a product , feature or website
-        Look through some of my work and experience! If you like what you see and have a project you need coded, don’t
-        hestiate to contact me.</p>
+      <p class="txt-2 mrg-0 pd-0">
+        I’m a software developer! Passionate about helping and turn ideas into reality.
+        Whether you need a new product, feature, or website, I have the expertise to bring your vision to life.
+        If you like what you see and have a project that needs coding, don’t hestiate to contact me.
+      </p>
       <h2 class="txt-3 mrg-0 pd-0">LET’S CONNECT</h2>
       <ul class="scl-icons mrg-0 pd-0">
         <li><a href="#"><img src="img/github.svg" alt="github"></a></li>
@@ -188,8 +188,13 @@
     <div class="contact-me-bg" data-aos="fade-up" data-aos-easing="ease-out-cubic" data-aos-duration="1000">
       <div class="contact-me-container">
         <h1 class="contact-me-title">Contact me</h1>
-        <p class="contact-me-paragraph dsktp-pd">If you have an application you are interested in developing, a feature
-          that you need built or a project that needs coding. I’d love to help with it</p>
+        <p class="contact-me-paragraph dsktp-pd">
+          If you have an application, feature, or project that needs coding.
+          Don't hesitate to reach out to me to get started.
+        </p>
+          <h2 class="contact-me-paragraph dsktp-pd">
+            Let's make it real!
+          </h2>
         <form action="https://formspree.io/f/xnqwkwnk" method="post" class="contact-me-form" id="form">
           <label class="hide-item" for="name-input">Name</label>
           <input type="text" name="name" id="name-input" maxlength="30" class="input" placeholder="Full name" required>
@@ -198,7 +203,7 @@
           <label class="hide-item" for="message-input">message</label>
           <textarea name="message" id="message-input" cols="30" rows="6" class="input" maxlength="500" required
             placeholder="Write your message here"></textarea>
-          <h6 id="error">Error</h6>
+          <h3 id="error">Error</h3>
           <div class="dsktp-align checker">
             <button type="submit" class="mobile-btn mobile-btn-txt">Get in Touch</button>
           </div>
