--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <li><a href="#"><img src="img/twitter.svg" alt="twitter"></a></li>
         <li class=""><a href="#"><img src="img/medium.svg" alt="medium"></a></li>
       </ul>
-      <button type="submit" class="mobile-btn mobile-btn-txt ">Get my Resume</button>
+      <a type="button" href="img/Resume.pdf" class="mobile-btn mobile-btn-txt " download>Get my Resume</a>
     </div>
     <div class="skill" data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="1000">
       <ul class="list-stl pd-0 skill-lst-mrg">
