Fix About section links

--- a/index.html
+++ b/index.html
@@ -78,11 +78,16 @@
       </p>
       <h2 class="txt-3 mrg-0 pd-0">LET’S CONNECT</h2>
       <ul class="scl-icons mrg-0 pd-0">
-        <li><a href="#"><img src="img/github.svg" alt="github"></a></li>
-        <li><a href="#"><img src="img/Linkedinicon.svg" alt="linkedin"></a></li>
-        <li><a href="#"><img src="img/angelist.svg" alt="angelist"></a></li>
-        <li><a href="#"><img src="img/twitter.svg" alt="twitter"></a></li>
-        <li class=""><a href="#"><img src="img/medium.svg" alt="medium"></a></li>
+        <li><a href="https://twitter.com/Danys_Linares" target="_blank" rel="noreferrer noopener"><img
+          src="img/twitter.svg" alt="twitter"></a></li>
+        <li><a href="https://www.linkedin.com/in/danys-linares/" target="_blank" rel="noreferrer noopener"><img
+          src="img/Linkedinicon.svg" alt="linkedin"></a></li>
+        <li><a href="https://medium.com/@danlinmoy" target="_blank" rel="noreferrer noopener"><img
+          src="img/medium.svg" alt="medium"></a></li>
+        <li><a href="https://github.com/d4nQw3rty" target="_blank" rel="noreferrer noopener"><img src="img/github.svg"
+          alt="github"></a></li>
+        <li><a href="https://wellfound.com/u/danys-linares" target="_blank" rel="noreferrer noopener"><img
+          src="img/angelist.svg" alt="angelist" rel="noreferrer noopener"></a></li>
       </ul>
       <a type="button" href="img/Resume.pdf" class="mobile-btn mobile-btn-txt " download>Get my Resume</a>
     </div>
